- Added Cave Mushroom to the loot table of Infesting Jormungar for the quest Cave Medicine.
- Added Cave Mushroom to the loot table of Cavedweller Worg for the quest Cave Medicine.
- Updated the flags of Cave Mushroom to allow every member of a group to loot it.
- Updated the flags of Inventor's Disk Fragment to allow every member of a group to loot it.

[2023-05-18]
- Updated the respawn time of Umpi.

[2023-05-19]
- Updated the respawn time of Stanley.

[2023-05-25]
- Added Bleeding Hollow Supply Crate to the loot table of Boulderfist Warrior for the quest Bleeding Hollow Supply Crates.
- Added Bleeding Hollow Supply Crate to the loot table of Boulderfist Mage for the quest Bleeding Hollow Supply Crates.
- Added the script for the spell Plant Kil'sorrow Banner to make the quest Returning the Favor give credit to every member of a group.

[2023-05-26]
- Added Sketh'lon Feather to the loot table of Dark Conclave Talonite for the quest Sketh'lon Feathers.
- Added Sketh'lon Feather to the loot table of Dark Conclave Scorncrow for the quest Sketh'lon Feathers.
- Added Sketh'lon Feather to the loot table of Skethyl Owl for the quest Sketh'lon Feathers.
- Updated the flags of Sketh'lon Feather to allow every member of a group to loot it.
- Added Shipment of Animal Parts to the loot table of Northsea Mercenary for the quest Not On Our Watch.
- Added Shipment of Animal Parts to the loot table of Northsea Thug for the quest Not On Our Watch.
- Added Tuskarr Ritual Object to the loot table of Beryl Reclaimer for the quest Picking Up the Pieces.
- Updated the flags of Tuskarr Ritual Object to allow every member of a group to loot it.

[2023-05-27]
- Updated the smart script for Fizzcrank Recon Pilot to give every member of a group the quest item.

[2023-05-29]
- Updated the script for Envision Drakuru to add the aura to every member of a group.

[2023-06-03]
- Updated the smart script for Tatjana's Horse to give every member of a group credit.