@@ -585,6 +585,11 @@ INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (2800
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=28145 AND `ItemId`=38563;
 INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (28145, 1, 38563);
 
+-- Shiny Treasures (Quest: Gods like Shiny Things (Id: 12572), Quest: Appeasing the Great Rain Stone (Id: 12704))
+-- Emperor Cobra
+DELETE FROM `creature_questitem` WHERE `CreatureEntry`=28011 AND `ItemId`=38575;
+INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (28011, 5, 38575);
+
 -- Banana Bunch (Quest: Some Make Lemonade, Some Make Liquor (Id: 12634))
 -- Mangal Crocolisk
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=28002 AND `ItemId`=38653;
